<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY app_name "Planda">]>

<resources>
    <string name="app_name">&app_name;</string>
    <string name="Welcome_message">Welcome to &app_name;!</string>
    <string name="create_new_account">Create new account</string>
    <string name="start_img_content_description">Girl checks phone</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_your_new_account">Create your new account!</string>
    <string name="guy_checks_phone">guy checks phone</string>
    <string name="name">Name</string>
    <string name="create_free_account">Create free account</string>
    <string name="title_activity_primary">PrimaryActivity</string>

    <string name="action_log_out">Logout</string>
    <!-- Strings used for fragments for navigation -->

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <!-- comment -->
</resources>